--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "信息黑洞",
     "navigationBarTextStyle":"black"
   },
   "style": "v2",
